@@ -1,3 +1,9 @@
+2008-02-06  Mike Krüger <mkrueger@novell.com> 
+
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
+	  Makefile.am, MonoDevelop.SourceEditor.mdp,
+	  MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on printing
+
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
